--- a/index.html
+++ b/index.html
@@ -1,11 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Gmail UI</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+<header class="top-bar">
+  <img src="download.png" class="menu-icon">
+
+  <div class="search-bar">
+    <img src="magnifying-glass-solid-full.svg">
+    <p>Search mail</p>
+  </div>
+
+  <div class="right-area">
+    <div class="status-bar">
+      <div class="circle"></div>
+      <span>Active</span>
+      <img src="caret-down-solid-full.svg" class="caret-icon">
+    </div>
+    <img src="downloadquestion.png">
+    <img src="settings-icon-symbol-design-illustration-vector.jpg">
+    <img src="images (1).png">
+  </div>
+</header>
+<aside class="navigation-bar">
+  <img src="newgmaillogo.webp" class="logo">
+  <div class="nav-item"><img src="download (1).png"> Mail</div>
+  <div class="nav-item"><img src="images.png"> Chat</div>
+  <div class="nav-item"><img src="video-solid-full.svg"> Meet</div>
+
+  <hr>
+  <div class="compose"><img src="pencil-solid-full.svg"> Compose</div>
+
+  <div class="nav-item active"><img src="web-212493950.webp"> Inbox</div>
+  <div class="nav-item"><img src="star-regular-full.svg"> Starred</div>
+  <div class="nav-item"><img src="109613.png"> Snoozed</div>
+  <div class="nav-item"><img src="1280022.png"> Sent</div>
+  <div class="nav-item"><img src="file-regular-full.svg"> Drafts</div>
+  <div class="nav-item"><img src="caret-down-solid-full.svg"> More</div>
+</aside>
+<main class="mail-area">
+  <img src="Screenshot from 2025-12-17 23-36-18.png" class="mail-screenshot" alt="Mail list">
+</main>
+
 </body>
 </html>
