Update audio and video

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 <main class="mail-area">
   <img src="Screenshot from 2025-12-17 23-36-18.png" class="mail-screenshot" alt="Mail list">
 </main>
-<audio controls>
+<audio controls class="audio">
   <source src="1766037648986133448399rhoer-voicemaker.in-speech.mp3">
 </audio>
-<video controls width="250",height="150">
+<video controls width="250",height="150" class="video">
   <source src="228847_small.mp4">
 </video>
 </body>
